<resources>
    <string name="app_name">All Devices</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textDialog1">Введите данные седств измерений</string>
    <string name="name">Владелец СИ</string>
    <string name="title">Название</string>
    <string name="date">Дата поверки</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="org">Name of the organization</string>
    <string name="license">Я принимаю лицензионное солашение</string>
    <string name="scrollText">Сведения о скором сроке очередной поверки</string>
    <string name="scrollText2">Быстый доступ к руководствам эксплуатации на популяные седства измерений</string>

</resources>